# zellij-project-switcher

./: .gitignore  Cargo.toml  README.md  TODO.md  devenv.nix  justfile  plugin-dev-workspace.kdl
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
scripts/: env.sh  setup-wasi-sdk.sh
src/: core.rs  lib.rs  main.rs  stack.rs
tests/: core.rs  stack.rs
