[package]
name = "zellij-project-switcher-plugin"
version = "0.2.2"
edition = "2018"
authors = ["Ian Davies <idavies@leapingfrogs.com>"]

[[bin]]
name = "zellij-project-switcher-plugin"
bench = false

[lib]
bench = false

[features]
bench = []
tracing = []

[dependencies]
zellij-tile = "0.42.2"
serde = "1.0.223"
regex = "1.10.5"
nu-ansi-term = "0.50.1"

[dev-dependencies]
criterion = { version = "0.6.0", default-features = false, features = ["html_reports"] }

# [[bench]]
# name = "benches"
# harness = false

# [[bench]]
# name = "widgets"
# harness = false
