[package]
name = "zellij-project-switcher-plugin"
version = "0.2.3"
edition = "2018"
authors = ["Ian Davies <idavies@leapingfrogs.com>"]

[[bin]]
name = "zellij-project-switcher-plugin"
bench = false

[lib]
bench = false

[features]
bench = []
tracing = []

[dependencies]
zellij-tile = "0.43.1"
serde = "1.0.228"
regex = "1.12.2"
nu-ansi-term = "0.50.3"

[dev-dependencies]
criterion = { version = "0.8.1", default-features = false, features = ["html_reports"] }

# [[bench]]
# name = "benches"
# harness = false

# [[bench]]
# name = "widgets"
# harness = false
