[package]
name = "zellij-project-switcher-plugin"
version = "0.3.1"
edition = "2018"
authors = ["Ian Davies <idavies@leapingfrogs.com>"]

[[bin]]
name = "zellij-project-switcher-plugin"
bench = false

[lib]
bench = false

[features]
bench = []
tracing = []

# Zellij 0.44 runs plugins under wasmi instead of wasmtime; upstream recommends
# these settings to offset the interpreter's overhead.
[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
zellij-tile = "0.44.3"
serde = "1.0.228"
regex = "1.13.0"
nu-ansi-term = "0.50.3"

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["html_reports"] }

# [[bench]]
# name = "benches"
# harness = false

# [[bench]]
# name = "widgets"
# harness = false
